[gd_scene load_steps=10 format=2]

[ext_resource path="res://Systems/EntityPlacer.gd" type="Script" id=3]
[ext_resource path="res://Shared/Tileset.tres" type="TileSet" id=6]
[ext_resource path="res://Level/Level.gd" type="Script" id=9]
[ext_resource path="res://Entities/Entities/OreBoulderEntity/OreBoulderEntity.tscn" type="PackedScene" id=10]
[ext_resource path="res://Entities/Entities/StoneEntity/StoneEntity.tscn" type="PackedScene" id=11]
[ext_resource path="res://Entities/Entities/BranchesEntity/BranchesEntity.tscn" type="PackedScene" id=12]
[ext_resource path="res://Entities/Entities/BoulderEntity/BoulderEntity.tscn" type="PackedScene" id=13]
[ext_resource path="res://Entities/Player/Player.tscn" type="PackedScene" id=14]
[ext_resource path="res://Entities/Entities/TreeEntity/TreeEntity.tscn" type="PackedScene" id=15]

[node name="Level2" type="Node2D"]
script = ExtResource( 9 )
move_limit_left = -1664
move_limit_top = -896
move_limit_right = 7296
move_limit_bottom = 1728

[node name="GroundTile" type="TileMap" parent="."]
mode = 1
tile_set = ExtResource( 6 )
cell_size = Vector2( 100, 50 )
format = 1
tile_data = PoolIntArray( -1245165, 3, 0, -1114114, 3, 0, -1114113, 3, 0, -1179648, 3, 0, -1179647, 3, 0, -1179646, 3, 0, -1179645, 3, 0, -1179644, 3, 0, -1179643, 3, 0, -1179642, 3, 0, -1179641, 3, 0, -1179640, 3, 0, -1179639, 3, 0, -1179638, 3, 0, -1179637, 3, 0, -1179636, 3, 0, -1179635, 3, 0, -1179634, 3, 0, -1179633, 3, 0, -1179632, 3, 0, -1179631, 3, 0, -1179630, 3, 0, -1179629, 3, 0, -1179628, 3, 0, -1048578, 3, 0, -1048577, 3, 0, -1114112, 3, 0, -1114111, 3, 0, -1114110, 3, 0, -1114109, 3, 0, -1114108, 3, 0, -1114107, 3, 0, -1114106, 3, 0, -1114105, 3, 0, -1114104, 3, 0, -1114103, 3, 0, -1114102, 3, 0, -1114101, 3, 0, -1114100, 3, 0, -1114099, 3, 0, -1114098, 3, 0, -1114097, 3, 0, -1114096, 3, 0, -1114095, 3, 0, -1114094, 3, 0, -1114093, 3, 0, -1114092, 3, 0, -1114091, 3, 0, -983042, 3, 0, -983041, 3, 0, -1048576, 3, 0, -1048575, 3, 0, -1048574, 3, 0, -1048573, 3, 0, -1048572, 3, 0, -1048571, 3, 0, -1048570, 3, 0, -1048569, 3, 0, -1048568, 3, 0, -1048567, 3, 0, -1048566, 3, 0, -1048565, 3, 0, -1048564, 3, 0, -1048563, 3, 0, -1048562, 3, 0, -1048561, 3, 0, -1048560, 3, 0, -1048559, 3, 0, -1048558, 3, 0, -1048557, 3, 0, -1048556, 3, 0, -1048555, 3, 0, -1048554, 3, 0, -1048553, 3, 0, -917506, 3, 0, -917505, 3, 0, -983040, 3, 0, -983039, 3, 0, -983038, 3, 0, -983037, 3, 0, -983036, 3, 0, -983035, 3, 0, -983034, 3, 0, -983033, 3, 0, -983032, 3, 0, -983031, 3, 0, -983030, 3, 0, -983029, 3, 0, -983028, 3, 0, -983027, 3, 0, -983026, 3, 0, -983025, 3, 0, -983024, 3, 0, -983023, 3, 0, -983022, 3, 0, -983021, 3, 0, -983020, 3, 0, -983019, 3, 0, -983018, 3, 0, -983017, 3, 0, -983016, 3, 0, -851970, 3, 0, -851969, 3, 0, -917504, 3, 0, -917503, 3, 0, -917502, 3, 0, -917501, 3, 0, -917500, 3, 0, -917499, 3, 0, -917498, 3, 0, -917497, 3, 0, -917496, 3, 0, -917495, 3, 0, -917494, 3, 0, -917493, 3, 0, -917492, 3, 0, -917491, 3, 0, -917490, 3, 0, -917489, 3, 0, -917488, 3, 0, -917487, 3, 0, -917486, 3, 0, -917485, 3, 0, -917484, 3, 0, -917483, 3, 0, -917482, 3, 0, -917481, 3, 0, -917480, 3, 0, -917479, 3, 0, -786434, 3, 0, -786433, 3, 0, -851968, 3, 0, -851967, 3, 0, -851966, 3, 0, -851965, 3, 0, -851964, 3, 0, -851963, 3, 0, -851962, 3, 0, -851961, 3, 0, -851960, 3, 0, -851959, 3, 0, -851958, 3, 0, -851957, 3, 0, -851956, 3, 0, -851955, 3, 0, -851954, 3, 0, -851953, 3, 0, -851952, 3, 0, -851951, 3, 0, -851950, 3, 0, -851949, 3, 0, -851948, 3, 0, -851947, 3, 0, -851946, 3, 0, -851945, 3, 0, -851944, 3, 0, -851943, 3, 0, -851942, 3, 0, -786421, 3, 0, -786420, 3, 0, -786419, 3, 0, -786418, 3, 0, -786417, 3, 0, -786416, 3, 0, -786415, 3, 0, -786414, 3, 0, -786413, 3, 0, -786412, 3, 0, -786411, 3, 0, -786410, 3, 0, -786409, 3, 0, -786408, 3, 0, -786407, 3, 0, -786406, 3, 0, -786405, 3, 0, -720886, 3, 0, -720885, 3, 0, -720884, 3, 0, -720883, 3, 0, -720882, 3, 0, -720881, 3, 0, -720880, 3, 0, -720879, 3, 0, -720878, 3, 0, -720877, 3, 0, -720876, 3, 0, -720875, 3, 0, -720874, 3, 0, -720873, 3, 0, -720872, 3, 0, -720871, 3, 0, -720870, 3, 0, -720869, 3, 0, -720868, 3, 0, -655352, 3, 0, -655351, 3, 0, -655350, 3, 0, -655349, 3, 0, -655348, 3, 0, -655347, 3, 0, -655346, 3, 0, -655345, 3, 0, -655344, 3, 0, -655343, 3, 0, -655342, 3, 0, -655341, 3, 0, -655340, 3, 0, -655339, 3, 0, -655338, 3, 0, -655337, 3, 0, -655336, 3, 0, -655335, 3, 0, -655334, 3, 0, -655333, 3, 0, -655332, 3, 0, -655331, 3, 0, -589816, 3, 0, -589815, 3, 0, -589814, 3, 0, -589813, 3, 0, -589812, 3, 0, -589811, 3, 0, -589810, 3, 0, -589809, 3, 0, -589808, 3, 0, -589807, 3, 0, -589806, 3, 0, -589805, 3, 0, -589804, 3, 0, -589803, 3, 0, -589802, 3, 0, -589801, 3, 0, -589800, 3, 0, -589799, 3, 0, -589798, 3, 0, -589797, 3, 0, -589796, 3, 0, -589795, 3, 0, -589794, 3, 0, -589793, 3, 0, -524281, 3, 0, -524280, 3, 0, -524279, 3, 0, -524278, 3, 0, -524277, 3, 0, -524276, 3, 0, -524275, 3, 0, -524274, 3, 0, -524273, 3, 0, -524272, 3, 0, -524271, 3, 0, -524270, 3, 0, -524269, 3, 0, -524268, 3, 0, -524267, 3, 0, -524266, 3, 0, -524265, 3, 0, -524264, 3, 0, -524263, 3, 0, -524262, 3, 0, -524261, 3, 0, -524260, 3, 0, -524259, 3, 0, -524258, 3, 0, -524257, 3, 0, -524256, 3, 0, -458745, 3, 0, -458744, 3, 0, -458743, 3, 0, -458742, 3, 0, -458741, 3, 0, -458740, 3, 0, -458739, 3, 0, -458738, 3, 0, -458737, 3, 0, -458736, 3, 0, -458735, 3, 0, -458734, 3, 0, -458733, 3, 0, -458732, 3, 0, -458731, 3, 0, -458730, 3, 0, -458729, 3, 0, -458728, 3, 0, -458727, 3, 0, -458726, 3, 0, -458725, 3, 0, -458724, 3, 0, -458723, 3, 0, -458722, 3, 0, -458721, 3, 0, -458720, 3, 0, -458719, 3, 0, -393211, 3, 0, -393210, 3, 0, -393209, 3, 0, -393208, 3, 0, -393207, 3, 0, -393206, 3, 0, -393205, 3, 0, -393204, 3, 0, -393203, 3, 0, -393202, 3, 0, -393201, 3, 0, -393200, 3, 0, -393199, 3, 0, -393198, 3, 0, -393197, 3, 0, -393196, 3, 0, -393195, 3, 0, -393194, 3, 0, -393193, 3, 0, -393192, 3, 0, -393191, 3, 0, -393190, 3, 0, -393189, 3, 0, -393188, 3, 0, -393187, 3, 0, -393186, 3, 0, -393185, 3, 0, -393184, 3, 0, -393183, 3, 0, -393182, 3, 0, -327676, 3, 0, -327675, 3, 0, -327674, 3, 0, -327673, 3, 0, -327672, 3, 0, -327671, 3, 0, -327670, 3, 0, -327669, 3, 0, -327668, 3, 0, -327667, 3, 0, -327666, 3, 0, -327665, 3, 0, -327664, 3, 0, -327663, 3, 0, -327662, 3, 0, -327661, 3, 0, -327660, 3, 0, -327659, 3, 0, -327658, 3, 0, -327657, 3, 0, -327656, 3, 0, -327655, 3, 0, -327654, 3, 0, -327653, 3, 0, -327652, 3, 0, -327651, 3, 0, -327650, 3, 0, -327649, 3, 0, -327648, 3, 0, -327647, 3, 0, -327646, 3, 0, -327645, 3, 0, -262140, 3, 0, -262139, 3, 0, -262138, 3, 0, -262137, 3, 0, -262136, 3, 0, -262135, 3, 0, -262134, 3, 0, -262133, 3, 0, -262132, 3, 0, -262131, 3, 0, -262130, 3, 0, -262129, 3, 0, -262128, 3, 0, -262127, 3, 0, -262126, 3, 0, -262125, 3, 0, -262124, 3, 0, -262123, 3, 0, -262122, 3, 0, -262121, 3, 0, -262120, 3, 0, -262119, 3, 0, -262118, 3, 0, -262117, 3, 0, -262116, 3, 0, -262115, 3, 0, -262114, 3, 0, -262113, 3, 0, -262112, 3, 0, -262111, 3, 0, -262110, 3, 0, -262109, 3, 0, -262108, 3, 0, -196605, 3, 0, -196604, 3, 0, -196603, 3, 0, -196602, 3, 0, -196601, 3, 0, -196600, 3, 0, -196599, 3, 0, -196598, 3, 0, -196597, 3, 0, -196596, 3, 0, -196595, 3, 0, -196594, 3, 0, -196593, 3, 0, -196592, 3, 0, -196591, 3, 0, -196590, 3, 0, -196589, 3, 0, -196588, 3, 0, -196587, 3, 0, -196586, 3, 0, -196585, 3, 0, -196584, 3, 0, -196583, 3, 0, -196582, 3, 0, -196581, 3, 0, -196580, 3, 0, -196579, 3, 0, -196578, 3, 0, -196577, 3, 0, -196576, 3, 0, -196575, 3, 0, -196574, 3, 0, -196573, 3, 0, -196572, 3, 0, -196571, 3, 0, -131070, 3, 0, -131069, 3, 0, -131068, 3, 0, -131067, 3, 0, -131066, 3, 0, -131065, 3, 0, -131064, 3, 0, -131063, 3, 0, -131062, 3, 0, -131061, 3, 0, -131060, 3, 0, -131059, 3, 0, -131058, 3, 0, -131057, 3, 0, -131056, 3, 0, -131055, 3, 0, -131054, 3, 0, -131053, 3, 0, -131052, 3, 0, -131051, 3, 0, -131050, 3, 0, -131049, 3, 0, -131048, 3, 0, -131047, 3, 0, -131046, 3, 0, -131045, 3, 0, -131044, 3, 0, -131043, 3, 0, -131042, 3, 0, -131041, 3, 0, -131040, 3, 0, -131039, 3, 0, -131038, 3, 0, -131037, 3, 0, -131036, 3, 0, -131035, 3, 0, -131034, 3, 0, -65535, 3, 0, -65534, 3, 0, -65533, 3, 0, -65532, 3, 0, -65531, 3, 0, -65530, 3, 0, -65529, 3, 0, -65528, 3, 0, -65527, 3, 0, -65526, 3, 0, -65525, 3, 0, -65524, 3, 0, -65523, 3, 0, -65522, 3, 0, -65521, 3, 0, -65520, 3, 0, -65519, 3, 0, -65518, 3, 0, -65517, 3, 0, -65516, 3, 0, -65515, 3, 0, -65514, 3, 0, -65513, 3, 0, -65512, 3, 0, -65511, 3, 0, -65510, 3, 0, -65509, 3, 0, -65508, 3, 0, -65507, 3, 0, -65506, 3, 0, -65505, 3, 0, -65504, 3, 0, -65503, 3, 0, -65502, 3, 0, -65501, 3, 0, -65500, 3, 0, -65499, 3, 0, -65498, 3, 0, 1, 3, 0, 2, 3, 0, 3, 3, 0, 4, 3, 0, 5, 3, 0, 6, 3, 0, 7, 3, 0, 8, 3, 0, 9, 3, 0, 10, 3, 0, 11, 3, 0, 12, 3, 0, 13, 3, 0, 14, 3, 0, 15, 3, 0, 16, 3, 0, 17, 3, 0, 18, 3, 0, 19, 3, 0, 20, 3, 0, 21, 3, 0, 22, 3, 0, 23, 3, 0, 24, 3, 0, 25, 3, 0, 26, 3, 0, 27, 3, 0, 28, 3, 0, 29, 3, 0, 30, 3, 0, 31, 3, 0, 32, 3, 0, 33, 3, 0, 34, 3, 0, 35, 3, 0, 36, 3, 0, 37, 3, 0, 38, 3, 0, 39, 3, 0, 65538, 3, 0, 65539, 3, 0, 65540, 3, 0, 65541, 3, 0, 65542, 3, 0, 65543, 3, 0, 65544, 3, 0, 65545, 3, 0, 65546, 3, 0, 65547, 3, 0, 65548, 3, 0, 65549, 3, 0, 65550, 3, 0, 65551, 3, 0, 65552, 3, 0, 65553, 3, 0, 65554, 3, 0, 65555, 3, 0, 65556, 3, 0, 65557, 3, 0, 65558, 3, 0, 65559, 3, 0, 65560, 3, 0, 65561, 3, 0, 65562, 3, 0, 65563, 3, 0, 65564, 3, 0, 65565, 3, 0, 65566, 3, 0, 65567, 3, 0, 65568, 3, 0, 65569, 3, 0, 65570, 3, 0, 65571, 3, 0, 65572, 3, 0, 65573, 3, 0, 65574, 3, 0, 65575, 3, 0, 65576, 3, 0, 131075, 3, 0, 131076, 3, 0, 131077, 3, 0, 131078, 3, 0, 131079, 3, 0, 131080, 3, 0, 131081, 3, 0, 131082, 3, 0, 131083, 3, 0, 131084, 3, 0, 131085, 3, 0, 131086, 3, 0, 131087, 3, 0, 131088, 3, 0, 131089, 3, 0, 131090, 3, 0, 131091, 3, 0, 131092, 3, 0, 131093, 3, 0, 131094, 3, 0, 131095, 3, 0, 131096, 3, 0, 131097, 3, 0, 131098, 3, 0, 131099, 3, 0, 131100, 3, 0, 131101, 3, 0, 131102, 3, 0, 131103, 3, 0, 131104, 3, 0, 131105, 3, 0, 131106, 3, 0, 131107, 3, 0, 131108, 3, 0, 131109, 3, 0, 131110, 3, 0, 131111, 3, 0, 131112, 3, 0, 196612, 3, 0, 196613, 3, 0, 196614, 3, 0, 196615, 3, 0, 196616, 3, 0, 196617, 3, 0, 196618, 3, 0, 196619, 3, 0, 196620, 3, 0, 196621, 3, 0, 196622, 3, 0, 196623, 3, 0, 196624, 3, 0, 196625, 3, 0, 196626, 3, 0, 196627, 3, 0, 196628, 3, 0, 196629, 3, 0, 196630, 3, 0, 196631, 3, 0, 196632, 3, 0, 196633, 3, 0, 196634, 3, 0, 196635, 3, 0, 196636, 3, 0, 196637, 3, 0, 196638, 3, 0, 196639, 3, 0, 196640, 3, 0, 196641, 3, 0, 196642, 3, 0, 196643, 3, 0, 196644, 3, 0, 196645, 3, 0, 196646, 3, 0, 196647, 3, 0, 196648, 3, 0, 262150, 3, 0, 262151, 3, 0, 262152, 3, 0, 262153, 3, 0, 262154, 3, 0, 262155, 3, 0, 262156, 3, 0, 262157, 3, 0, 262158, 3, 0, 262159, 3, 0, 262160, 3, 0, 262161, 3, 0, 262162, 3, 0, 262163, 3, 0, 262164, 3, 0, 262165, 3, 0, 262166, 3, 0, 262167, 3, 0, 262168, 3, 0, 262169, 3, 0, 262170, 3, 0, 262171, 3, 0, 262172, 3, 0, 262173, 3, 0, 262174, 3, 0, 262175, 3, 0, 262176, 3, 0, 262177, 3, 0, 262178, 3, 0, 262179, 3, 0, 262180, 3, 0, 262181, 3, 0, 262182, 3, 0, 262183, 3, 0, 327686, 3, 0, 327687, 3, 0, 327688, 3, 0, 327689, 3, 0, 327690, 3, 0, 327691, 3, 0, 327692, 3, 0, 327693, 3, 0, 327694, 3, 0, 327695, 3, 0, 327696, 3, 0, 327697, 3, 0, 327698, 3, 0, 327699, 3, 0, 327700, 3, 0, 327701, 3, 0, 327702, 3, 0, 327703, 3, 0, 327704, 3, 0, 327705, 3, 0, 327706, 3, 0, 327707, 3, 0, 327708, 3, 0, 327709, 3, 0, 327710, 3, 0, 327711, 3, 0, 327712, 3, 0, 327713, 3, 0, 327714, 3, 0, 327715, 3, 0, 327716, 3, 0, 327717, 3, 0, 327718, 3, 0, 393223, 3, 0, 393224, 3, 0, 393225, 3, 0, 393226, 3, 0, 393227, 3, 0, 393228, 3, 0, 393229, 3, 0, 393230, 3, 0, 393231, 3, 0, 393232, 3, 0, 393233, 3, 0, 393234, 3, 0, 393235, 3, 0, 393236, 3, 0, 393237, 3, 0, 393238, 3, 0, 393239, 3, 0, 393240, 3, 0, 393241, 3, 0, 393242, 3, 0, 393243, 3, 0, 393244, 3, 0, 393245, 3, 0, 393246, 3, 0, 393247, 3, 0, 393248, 3, 0, 393249, 3, 0, 393250, 3, 0, 393251, 3, 0, 393252, 3, 0, 393253, 3, 0, 458760, 3, 0, 458761, 3, 0, 458762, 3, 0, 458763, 3, 0, 458764, 3, 0, 458765, 3, 0, 458766, 3, 0, 458767, 3, 0, 458768, 3, 0, 458769, 3, 0, 458770, 3, 0, 458771, 3, 0, 458772, 3, 0, 458773, 3, 0, 458774, 3, 0, 458775, 3, 0, 458776, 3, 0, 458777, 3, 0, 458778, 3, 0, 458779, 3, 0, 458780, 3, 0, 458781, 3, 0, 458782, 3, 0, 458783, 3, 0, 458784, 3, 0, 458785, 3, 0, 458786, 3, 0, 458787, 3, 0, 458788, 3, 0, 458789, 3, 0, 524297, 3, 0, 524298, 3, 0, 524299, 3, 0, 524300, 3, 0, 524301, 3, 0, 524302, 3, 0, 524303, 3, 0, 524304, 3, 0, 524305, 3, 0, 524306, 3, 0, 524307, 3, 0, 524308, 3, 0, 524309, 3, 0, 524310, 3, 0, 524311, 3, 0, 524312, 3, 0, 524313, 3, 0, 524314, 3, 0, 524315, 3, 0, 524316, 3, 0, 524317, 3, 0, 524318, 3, 0, 524319, 3, 0, 524320, 3, 0, 524321, 3, 0, 524322, 3, 0, 524323, 3, 0, 589834, 3, 0, 589835, 3, 0, 589836, 3, 0, 589837, 3, 0, 589838, 3, 0, 589839, 3, 0, 589840, 3, 0, 589841, 3, 0, 589842, 3, 0, 589843, 3, 0, 589844, 3, 0, 589845, 3, 0, 589846, 3, 0, 589847, 3, 0, 589848, 3, 0, 589849, 3, 0, 589850, 3, 0, 589851, 3, 0, 589852, 3, 0, 589853, 3, 0, 589854, 3, 0, 589855, 3, 0, 589856, 3, 0, 589857, 3, 0, 589858, 3, 0, 655371, 3, 0, 655372, 3, 0, 655373, 3, 0, 655374, 3, 0, 655375, 3, 0, 655376, 3, 0, 655377, 3, 0, 655378, 3, 0, 655379, 3, 0, 655380, 3, 0, 655381, 3, 0, 655382, 3, 0, 655383, 3, 0, 655384, 3, 0, 655385, 3, 0, 655386, 3, 0, 655387, 3, 0, 655388, 3, 0, 655389, 3, 0, 655390, 3, 0, 655391, 3, 0, 655392, 3, 0, 655393, 3, 0, 655394, 3, 0, 720908, 3, 0, 720909, 3, 0, 720910, 3, 0, 720911, 3, 0, 720912, 3, 0, 720913, 3, 0, 720914, 3, 0, 720915, 3, 0, 720916, 3, 0, 720917, 3, 0, 720918, 3, 0, 720919, 3, 0, 720920, 3, 0, 720921, 3, 0, 720922, 3, 0, 720923, 3, 0, 720924, 3, 0, 720925, 3, 0, 720926, 3, 0, 720927, 3, 0, 720928, 3, 0, 720930, 3, 0, 786445, 3, 0, 786446, 3, 0, 786447, 3, 0, 786448, 3, 0, 786449, 3, 0, 786450, 3, 0, 786451, 3, 0, 786452, 3, 0, 786453, 3, 0, 786454, 3, 0, 786455, 3, 0, 786456, 3, 0, 786457, 3, 0, 786458, 3, 0, 786459, 3, 0, 786460, 3, 0, 786461, 3, 0, 851982, 3, 0, 851983, 3, 0, 851984, 3, 0, 851985, 3, 0, 851986, 3, 0, 851987, 3, 0, 851988, 3, 0, 851989, 3, 0, 851990, 3, 0, 851991, 3, 0, 851992, 3, 0, 851993, 3, 0, 851994, 3, 0, 851995, 3, 0, 851996, 3, 0, 917519, 3, 0, 917520, 3, 0, 917521, 3, 0, 917522, 3, 0, 917523, 3, 0, 917524, 3, 0, 917525, 3, 0, 917526, 3, 0, 917527, 3, 0, 917528, 3, 0, 917529, 3, 0, 917530, 3, 0, 917531, 3, 0, 917532, 3, 0, 983056, 3, 0, 983057, 3, 0, 983058, 3, 0, 983059, 3, 0, 983060, 3, 0, 983061, 3, 0, 983062, 3, 0, 983063, 3, 0, 983064, 3, 0, 983065, 3, 0, 983066, 3, 0, 983067, 3, 0, 1048593, 3, 0, 1048594, 3, 0, 1048595, 3, 0, 1048596, 3, 0, 1048597, 3, 0, 1048598, 3, 0, 1048599, 3, 0, 1048600, 3, 0, 1048601, 3, 0, 1114130, 3, 0, 1114131, 3, 0, 1114132, 3, 0, 1114133, 3, 0, 1114134, 3, 0, 1114135, 3, 0, 1114136, 3, 0, 1179667, 3, 0, 1179668, 3, 0, 1179669, 3, 0, 1179670, 3, 0, 1179671, 3, 0, 1245203, 3, 0, 1245204, 3, 0, 1245205, 3, 0 )

[node name="FlatEntities" type="YSort" parent="."]

[node name="YSort" type="YSort" parent="."]

[node name="EntityPlacer" type="TileMap" parent="YSort"]
mode = 1
cell_size = Vector2( 100, 50 )
cell_y_sort = true
format = 1
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="YSort/EntityPlacer"]

[node name="StoneEntity" parent="YSort/EntityPlacer" instance=ExtResource( 11 )]
position = Vector2( 1063, 346 )

[node name="StoneEntity2" parent="YSort/EntityPlacer" instance=ExtResource( 11 )]
position = Vector2( 997, 370 )

[node name="BranchesEntity" parent="YSort/EntityPlacer" instance=ExtResource( 12 )]
position = Vector2( 1173, 402 )

[node name="BranchesEntity2" parent="YSort/EntityPlacer" instance=ExtResource( 12 )]
position = Vector2( 1248, 444 )

[node name="BranchesEntity3" parent="YSort/EntityPlacer" instance=ExtResource( 12 )]
position = Vector2( 1103, 276 )

[node name="BranchesEntity4" parent="YSort/EntityPlacer" instance=ExtResource( 12 )]
position = Vector2( 1201, 278 )

[node name="BranchesEntity5" parent="YSort/EntityPlacer" instance=ExtResource( 12 )]
position = Vector2( 1142, 344 )

[node name="BranchesEntity6" parent="YSort/EntityPlacer" instance=ExtResource( 12 )]
position = Vector2( 1051, 252 )

[node name="BoulderEntity3" parent="YSort/EntityPlacer" instance=ExtResource( 13 )]
position = Vector2( -850, 48 )

[node name="BoulderEntity4" parent="YSort/EntityPlacer" instance=ExtResource( 13 )]
position = Vector2( -901, -27 )

[node name="BoulderEntity5" parent="YSort/EntityPlacer" instance=ExtResource( 13 )]
position = Vector2( -948, -98 )

[node name="BoulderEntity6" parent="YSort/EntityPlacer" instance=ExtResource( 13 )]
position = Vector2( -951, -148 )

[node name="BoulderEntity7" parent="YSort/EntityPlacer" instance=ExtResource( 13 )]
position = Vector2( -947, 52 )

[node name="BoulderEntity8" parent="YSort/EntityPlacer" instance=ExtResource( 13 )]
position = Vector2( -1004, -172 )

[node name="BoulderEntity9" parent="YSort/EntityPlacer" instance=ExtResource( 13 )]
position = Vector2( -1051, -199 )

[node name="TreeEntity" parent="YSort/EntityPlacer" instance=ExtResource( 15 )]
position = Vector2( 1304, 474 )

[node name="TreeEntity2" parent="YSort/EntityPlacer" instance=ExtResource( 15 )]
position = Vector2( 1402, 526 )

[node name="TreeEntity3" parent="YSort/EntityPlacer" instance=ExtResource( 15 )]
position = Vector2( 1502, 574 )

[node name="TreeEntity4" parent="YSort/EntityPlacer" instance=ExtResource( 15 )]
position = Vector2( 348, -553 )

[node name="TreeEntity5" parent="YSort/EntityPlacer" instance=ExtResource( 15 )]
position = Vector2( 53, -549 )

[node name="TreeEntity6" parent="YSort/EntityPlacer" instance=ExtResource( 15 )]
position = Vector2( -254, -552 )

[node name="TreeEntity7" parent="YSort/EntityPlacer" instance=ExtResource( 15 )]
position = Vector2( 199, -624 )

[node name="TreeEntity8" parent="YSort/EntityPlacer" instance=ExtResource( 15 )]
position = Vector2( -96, -629 )

[node name="TreeEntity9" parent="YSort/EntityPlacer" instance=ExtResource( 15 )]
position = Vector2( 50, -653 )

[node name="TreeEntity10" parent="YSort/EntityPlacer" instance=ExtResource( 15 )]
position = Vector2( -702, -275 )

[node name="TreeEntity11" parent="YSort/EntityPlacer" instance=ExtResource( 15 )]
position = Vector2( -454, -398 )

[node name="TreeEntity12" parent="YSort/EntityPlacer" instance=ExtResource( 15 )]
position = Vector2( 1598, 678 )

[node name="TreeEntity13" parent="YSort/EntityPlacer" instance=ExtResource( 15 )]
position = Vector2( 1198, 31 )

[node name="TreeEntity14" parent="YSort/EntityPlacer" instance=ExtResource( 15 )]
position = Vector2( 1293, 278 )

[node name="TreeEntity15" parent="YSort/EntityPlacer" instance=ExtResource( 15 )]
position = Vector2( 1001, 226 )

[node name="TreeEntity16" parent="YSort/EntityPlacer" instance=ExtResource( 15 )]
position = Vector2( 1146, 305 )

[node name="OreBoulderEntity" parent="YSort/EntityPlacer" instance=ExtResource( 10 )]
position = Vector2( -1254, -53 )

[node name="OreBoulderEntity2" parent="YSort/EntityPlacer" instance=ExtResource( 10 )]
position = Vector2( 6952, 1252 )

[node name="OreBoulderEntity3" parent="YSort/EntityPlacer" instance=ExtResource( 10 )]
position = Vector2( 6950, 1106 )

[node name="OreBoulderEntity4" parent="YSort/EntityPlacer" instance=ExtResource( 10 )]
position = Vector2( -1102, -21 )

[node name="OreBoulderEntity5" parent="YSort/EntityPlacer" instance=ExtResource( 10 )]
position = Vector2( -996, 25 )

[node name="OreBoulderEntity6" parent="YSort/EntityPlacer" instance=ExtResource( 10 )]
position = Vector2( -1055, -100 )

[node name="Tween" type="Tween" parent="YSort/EntityPlacer"]

[node name="Player" parent="YSort" instance=ExtResource( 14 )]
position = Vector2( 962, 539 )
